--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <groupId>ch.hearc</groupId>
   <artifactId>cafheg</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
