--- a/pom.xml
+++ b/pom.xml
@@ -187,7 +187,7 @@
         <configuration>
           <url>http://localhost:8085/manager/text</url>
           <server>TomcatServer</server>
-          <path>/cafheg</path>
+          <path>/cafhegDEV</path>
         </configuration>
       </plugin>
     </plugins>
